@@ -7513,6 +7513,186 @@ name|RANDOM_ACCESS_FILTER_STRATEGY
 return|;
 block|}
 block|}
+comment|/**    * Returns a random string in the specified length range consisting     * entirely of whitespace characters     * @see #WHITESPACE_CHARACTERS    */
+DECL|method|randomWhitespace
+specifier|public
+specifier|static
+name|String
+name|randomWhitespace
+parameter_list|(
+name|Random
+name|r
+parameter_list|,
+name|int
+name|minLength
+parameter_list|,
+name|int
+name|maxLength
+parameter_list|)
+block|{
+specifier|final
+name|int
+name|end
+init|=
+name|nextInt
+argument_list|(
+name|r
+argument_list|,
+name|minLength
+argument_list|,
+name|maxLength
+argument_list|)
+decl_stmt|;
+name|StringBuilder
+name|out
+init|=
+operator|new
+name|StringBuilder
+argument_list|()
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|end
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|int
+name|offset
+init|=
+name|nextInt
+argument_list|(
+name|r
+argument_list|,
+literal|0
+argument_list|,
+name|WHITESPACE_CHARACTERS
+operator|.
+name|length
+operator|-
+literal|1
+argument_list|)
+decl_stmt|;
+name|char
+name|c
+init|=
+name|WHITESPACE_CHARACTERS
+index|[
+name|offset
+index|]
+decl_stmt|;
+comment|// sanity check
+name|Assert
+operator|.
+name|assertTrue
+argument_list|(
+literal|"Not really whitespace? (@"
+operator|+
+name|offset
+operator|+
+literal|"): "
+operator|+
+name|c
+argument_list|,
+name|Character
+operator|.
+name|isWhitespace
+argument_list|(
+name|c
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|append
+argument_list|(
+name|c
+argument_list|)
+expr_stmt|;
+block|}
+return|return
+name|out
+operator|.
+name|toString
+argument_list|()
+return|;
+block|}
+comment|/** List of characters that match {@link Character#isWhitespace} */
+DECL|field|WHITESPACE_CHARACTERS
+specifier|public
+specifier|static
+specifier|final
+name|char
+index|[]
+name|WHITESPACE_CHARACTERS
+init|=
+operator|new
+name|char
+index|[]
+block|{
+comment|// :TODO: is this list exhaustive?
+literal|'\u0009'
+block|,
+literal|'\n'
+block|,
+literal|'\u000B'
+block|,
+literal|'\u000C'
+block|,
+literal|'\r'
+block|,
+literal|'\u001C'
+block|,
+literal|'\u001D'
+block|,
+literal|'\u001E'
+block|,
+literal|'\u001F'
+block|,
+literal|'\u0020'
+block|,
+comment|// '\u0085', faild sanity check?
+literal|'\u1680'
+block|,
+literal|'\u180E'
+block|,
+literal|'\u2000'
+block|,
+literal|'\u2001'
+block|,
+literal|'\u2002'
+block|,
+literal|'\u2003'
+block|,
+literal|'\u2004'
+block|,
+literal|'\u2005'
+block|,
+literal|'\u2006'
+block|,
+literal|'\u2008'
+block|,
+literal|'\u2009'
+block|,
+literal|'\u200A'
+block|,
+literal|'\u2028'
+block|,
+literal|'\u2029'
+block|,
+literal|'\u205F'
+block|,
+literal|'\u3000'
+block|,   }
+decl_stmt|;
 block|}
 end_class
 
