@@ -78,6 +78,20 @@ begin_import
 import|import
 name|org
 operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|util
+operator|.
+name|_TestUtil
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
 name|junit
 operator|.
 name|BeforeClass
@@ -91,6 +105,16 @@ operator|.
 name|junit
 operator|.
 name|Test
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Random
 import|;
 end_import
 
@@ -2046,6 +2070,267 @@ name|wantsAllFields
 argument_list|()
 argument_list|)
 expr_stmt|;
+block|}
+DECL|method|testWhitespace
+specifier|public
+name|void
+name|testWhitespace
+parameter_list|()
+block|{
+name|Random
+name|r
+init|=
+name|random
+argument_list|()
+decl_stmt|;
+specifier|final
+name|int
+name|iters
+init|=
+name|atLeast
+argument_list|(
+literal|30
+argument_list|)
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|iters
+condition|;
+name|i
+operator|++
+control|)
+block|{
+specifier|final
+name|boolean
+name|aliasId
+init|=
+name|r
+operator|.
+name|nextBoolean
+argument_list|()
+decl_stmt|;
+specifier|final
+name|boolean
+name|aliasFoo
+init|=
+name|r
+operator|.
+name|nextBoolean
+argument_list|()
+decl_stmt|;
+specifier|final
+name|String
+name|id
+init|=
+name|_TestUtil
+operator|.
+name|randomWhitespace
+argument_list|(
+name|r
+argument_list|,
+literal|0
+argument_list|,
+literal|3
+argument_list|)
+operator|+
+operator|(
+name|aliasId
+condition|?
+literal|"aliasId:"
+else|:
+literal|""
+operator|)
+operator|+
+literal|"id"
+operator|+
+name|_TestUtil
+operator|.
+name|randomWhitespace
+argument_list|(
+name|r
+argument_list|,
+literal|1
+argument_list|,
+literal|3
+argument_list|)
+decl_stmt|;
+specifier|final
+name|String
+name|foo_i
+init|=
+name|_TestUtil
+operator|.
+name|randomWhitespace
+argument_list|(
+name|r
+argument_list|,
+literal|0
+argument_list|,
+literal|3
+argument_list|)
+operator|+
+operator|(
+name|aliasFoo
+condition|?
+literal|"aliasFoo:"
+else|:
+literal|""
+operator|)
+operator|+
+literal|"foo_i"
+operator|+
+name|_TestUtil
+operator|.
+name|randomWhitespace
+argument_list|(
+name|r
+argument_list|,
+literal|0
+argument_list|,
+literal|3
+argument_list|)
+decl_stmt|;
+specifier|final
+name|String
+name|fl
+init|=
+name|id
+operator|+
+operator|(
+name|r
+operator|.
+name|nextBoolean
+argument_list|()
+condition|?
+literal|""
+else|:
+literal|","
+operator|)
+operator|+
+name|foo_i
+decl_stmt|;
+name|ReturnFields
+name|rf
+init|=
+operator|new
+name|ReturnFields
+argument_list|(
+name|req
+argument_list|(
+literal|"fl"
+argument_list|,
+name|fl
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|assertFalse
+argument_list|(
+literal|"score ("
+operator|+
+name|fl
+operator|+
+literal|")"
+argument_list|,
+name|rf
+operator|.
+name|wantsScore
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+literal|"id ("
+operator|+
+name|fl
+operator|+
+literal|")"
+argument_list|,
+name|rf
+operator|.
+name|wantsField
+argument_list|(
+literal|"id"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+literal|"foo_i ("
+operator|+
+name|fl
+operator|+
+literal|")"
+argument_list|,
+name|rf
+operator|.
+name|wantsField
+argument_list|(
+literal|"foo_i"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"aliasId ("
+operator|+
+name|fl
+operator|+
+literal|")"
+argument_list|,
+name|aliasId
+argument_list|,
+name|rf
+operator|.
+name|wantsField
+argument_list|(
+literal|"aliasId"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"aliasFoo ("
+operator|+
+name|fl
+operator|+
+literal|")"
+argument_list|,
+name|aliasFoo
+argument_list|,
+name|rf
+operator|.
+name|wantsField
+argument_list|(
+literal|"aliasFoo"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|rf
+operator|.
+name|wantsField
+argument_list|(
+literal|"xxx"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|rf
+operator|.
+name|wantsAllFields
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 block|}
 end_class
